# CMake-Tutorial

./: .gitignore  .gitmodules
Basics/: CMakeLists.txt  main.cpp
GitSubmodules/: CMakeLists.txt  build.sh  main.cpp  mainConfig.h.in  run.sh
Libraries/: CMakeLists.txt  main.cpp
Libraries/SomeLibDemo/: CMakeLists.txt  adder.cpp  adder.h
Libraries/TestSome/: CMakeLists.txt  main.cpp
